Made site mobile friendly

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </div>
 
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 weather-app">
           <h2 class="app mb-3">Weather App</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -94,6 +94,7 @@
             <a href="#" class="primary-link" title="Weather app">Launch Weather App</a>
           </div>
         </div>
+       
         <div class="col-md-6">
           <img src="images/weather.png" class="img-fluid" />
         </div>
