--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </div>
 
       <div class="row">
-        <div class="col-md-6 weather-app">
+        <div class="col-md-6">
           <h2 class="app mb-3">Weather App</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
